--- a/sass/style.css
+++ b/sass/style.css
@@ -1,12 +1,63 @@
 @charset "UTF-8";
-/* Loader à faire */
+/* Loader*/
 /* Button dégradé */
 /* Fonctionnement*/
 /* Coeur*/
 /* Responsive*/
-/* Heart */
+/* Loader */
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@-webkit-keyframes grow {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  50% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(0);
+    opacity: 0;
+  }
+}
+@keyframes grow {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  50% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(0);
+    opacity: 0;
+  }
+}
+@-webkit-keyframes loader {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes loader {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+/* Heart */
 @-webkit-keyframes fill {
   0% {
     opacity: 0;
@@ -180,6 +231,81 @@ img {
 }
 
 /* Loader*/
+.loader {
+  background: -webkit-linear-gradient(#FFF, #ff79da, #9356DC);
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 9999;
+  pointer-events: none;
+  -webkit-animation: loader 1s ease-in-out 2s forwards;
+          animation: loader 1s ease-in-out 2s forwards;
+}
+.loader::before {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 44%;
+  top: 50%;
+  width: 15px;
+  height: 75px;
+  background-color: #FFF;
+  -webkit-animation: grow 1.5s linear infinite;
+          animation: grow 1.5s linear infinite;
+}
+@media screen and (min-width: 768px) {
+  .loader::before {
+    left: 46%;
+    height: 90px;
+  }
+}
+@media screen and (min-width: 992px) {
+  .loader::before {
+    left: 48%;
+    top: 50%;
+  }
+}
+.loader::after {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 15px;
+  height: 65px;
+  background-color: #FFF;
+  -webkit-animation: grow 1.5s linear -0.5s infinite;
+          animation: grow 1.5s linear -0.5s infinite;
+}
+@media screen and (min-width: 768px) {
+  .loader::after {
+    height: 80px;
+  }
+}
+.loader span {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 56%;
+  top: 50%;
+  width: 15px;
+  height: 55px;
+  background-color: #FFF;
+  -webkit-animation: grow 1.5s linear -1s infinite;
+          animation: grow 1.5s linear -1s infinite;
+}
+@media screen and (min-width: 768px) {
+  .loader span {
+    left: 54%;
+    height: 70px;
+  }
+}
+@media screen and (min-width: 992px) {
+  .loader span {
+    left: 52%;
+  }
+}
+
 /* Header */
 /* Localisation*/
 .localisation {
