--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -1,3 +1,27 @@
+/* Loader */
+@keyframes grow {
+    0% {
+        transform: scale(0); opacity:0;
+    }
+    50% {
+        transform: scale(1); opacity:1;
+    }
+    100% {
+        transform: scale(0); opacity:0;
+    }
+}
+@keyframes loader{
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
 /* Heart */
 
 @keyframes fill {
