--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,7 +1,70 @@
-/* Loader à faire */
+/* Loader*/
 @mixin loader{
+    background:-webkit-linear-gradient( $colour-white, $colour-secondary,$colour-primary);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 9999;
+    pointer-events: none;
+    animation: loader 1s ease-in-out 2s forwards;
+        
+        &::before{
+            content:'';
+            display: block;
+            position: absolute;
+            left: 44%;
+            top: 50%;   
+            width: 15px;
+            height: 75px;
+            background-color: $colour-white;
+            animation: grow 1.5s linear infinite;
+
+            @include media-min($tablet) {
+                left: 46%;
+                height: 90px;
+            }
+            @include media-min($desktop) {
+                left: 48%;
+                top: 50%;  
+            }
+        }
+        &::after{
+            content:'';
+            display: block;
+            position: absolute;
+            left: 50%;
+            top: 50%;      
+            width: 15px;
+            height: 65px;
+            background-color: $colour-white;
+            animation: grow 1.5s linear -.5s infinite;
+            @include media-min($tablet) {
+                height: 80px;
+            }
+
+        }
+        & span {
+            content:'';
+            display: block;
+            position: absolute;
+            left: 56%;
+            top: 50%;   
+            width: 15px;
+            height: 55px;
+            background-color: $colour-white;
+            animation: grow 1.5s linear -1s infinite;
+            @include media-min($tablet) {
+                left: 54%;
+                height: 70px;
+            }
+            @include media-min($desktop) {
+                left: 52%;
+  
+            }
+
+        }
+    }
     
-}
 
 
 
